font size on mobile fix

--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ time, mark, audio, video {
 	margin: 0;
 	padding: 0;
 	border: 0;
-/*	font-size: 100%;*/
+	font-size: 100%;
 	font: inherit;
 	vertical-align: baseline;
 }
@@ -96,8 +96,6 @@ html {
     letter-spacing: .05em;
     width: 100%;
     height: 100%;
-    -webkit-text-size-adjust: 100%; /* Prevent font scaling in landscape while allowing user zoom */
-
 }
 
 
@@ -111,13 +109,12 @@ body {
     overflow-y: hidden;
     -webkit-overflow-scrolling: touch;
     -ms-overflow-style: -ms-autohiding-scrollbar;
-/*    height: 100vh;*/
     -webkit-scroll-snap-type: mandatory;
     -webkit-scroll-snap-points-x: repeat(100%);
 }
 
 @media only screen and (min-width : 320px) and (max-width : 560px) {
-	body {-webkit-text-size-adjust: none;}
+	body {-webkit-text-size-adjust: 100%;}
 }
 
 section {
